crates/deadline-cli/tests/snapshots/cli_auth__auth_login_dcm_monitor_not_found.snap
---
source: crates/deadline-cli/tests/cli_auth.rs
info:
  program: deadline
  args:
    - auth
    - login
  env:
    AWS_ACCESS_KEY_ID: AKIAIOSFODNN7EXAMPLE
    AWS_CONFIG_FILE: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpdsdbJb/aws_config
    AWS_DEFAULT_PROFILE: ""
    AWS_DEFAULT_REGION: us-west-2
    AWS_ENDPOINT_URL: ""
    AWS_ENDPOINT_URL_DEADLINE: "http://localhost:60348"
    AWS_ENDPOINT_URL_STS: "http://localhost:60348"
    AWS_PROFILE: ""
    AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
    AWS_SECURITY_TOKEN: ""
    AWS_SESSION_TOKEN: ""
    AWS_SHARED_CREDENTIALS_FILE: ""
    DEADLINE_CONFIG_FILE_PATH: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpdsdbJb/config
    HOME: /var/folders/r_/m1d3rb6s2nb559nj4hd77ptm0000gq/T/.tmpdsdbJb
---
success: false
exit_code: 1
----- stdout -----
Logging into AWS Profile 'test-dcm' for AWS Deadline Cloud
Could not find Deadline Cloud monitor at /nonexistent/path/to/monitor. Please ensure Deadline Cloud monitor is installed correctly and set up the test-dcm profile again.

----- stderr -----
